--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
             <div class="nav-links">
                 <a href="{{ url_for('index') }}" class="nav-link">Zoznamy Darčekov</a>
                 <a href="{{ url_for('admin') }}" class="nav-link admin-link">Správa</a>
+                <a href="{{ url_for('logout') }}" class="nav-link logout-link">Odhlásiť sa</a>
             </div>
         </div>
     </nav>
